[bugfix] appbar z-index

--- a/app/Components/AppBar/appBar.scss
+++ b/app/Components/AppBar/appBar.scss
@@ -2,6 +2,7 @@
 
 .appbar {
     position: sticky;
+    z-index: 1000;
     top: 0; left: 0;
     background-color: colors-dark.$primary-color;
     color: #333333;
